--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- TreeSet or HashSet?
+- two ways of textualization (expression): 1- static-long (getStatus), 2- dynamic-short (toString) ?
 - change naming of sensoryneuroid to 'percept'
 - add count of neuroids in a concept to its string value!
 - implement tzeng's network: allocate all assemblies in input area and create all UMs then prune connections and count 'em!
