--- a/TODO
+++ b/TODO
@@ -1,11 +1,29 @@
-- put title on graph
+- periphery
+	+ make a single sensory area 
+	- put concept-area into peripheral object? does it need its step() called?
+	- move Concept related files to periphery
+		- move ConceptArea to periphery package
+		- ArtificialConcept?
+		- ConceptSaturatedException
+- throw FoundException in Utils.Task to optimize iterations for search 
+- extend the Vectors that holds neuroids, etc. so that they show up in organizational descriptions
+	- correct way would've been to have templatized types of vectors
+- graphs
+	- put title on matlab graph
+	- modify to produce gnuplot graphs optionally. 
 - make debugger-style simulator
-	- make a shell read-eval-print loop that drives Base.Network
-	- that builds the net from another network file but then takes over in simulation()
-	- save the network after build(), use serialization, don't save all spikes, 
-		just the ones being debugged
- 	- allow debug switches on all objects (corresponding to watching)
-	- allow re-runs (by saving network state in binary with serialization
+	- enable placement of breakpoints
+ 	- allow watch switches on all objects (corresponding to watching)
+		- every entity should record its activity in a separate file
+		(or just serialize them?)
+			- neuroid saves its fire time, mode: threshold, c, d
+			- synapse saves its weight, and spike receive time
+		+ neuroid, (synapse records info by checking destneuroid)
+	+ make a shell read-eval-print loop that drives Base.Network (using BeanShell instead)
+	+ that builds the net from another network file but then takes over in simulation()
+	+ save the network after build(), use serialization, 
+	+ don't save all spikes, just the ones being debugged
+	+ allow re-runs (by saving network state in binary with serialization
 		(make everything serializable))
 -errors:
 	- spurious concepts, due to infinite weights
@@ -14,14 +32,12 @@
 - area name as a concept? or area representing neuroids?
 + limit recruitment by throwing an exception in Concept.attach
 - put step inside Neuroid.Mode?
-- modify to produce gnuplot graphs optionally. 
 - fix ConcurrentModificationException by waiting for all threads to finish at the end.
 + make neuroidal web page with links to reports of related projects
-- make Area implement Remote.AreaInt, etc.
-- TreeSet or HashSet?
++ make Area implement Remote.AreaInt, etc.
++ TreeSet or HashSet?
 - change naming of sensoryneuroid to 'percept'
 - implement tzeng's network: allocate all assemblies in input area and create all UMs then prune connections and count 'em!
-- move Concept related files to periphery/ (SensoryXX are done, how about ArtificialConcept?)
 - use AxonArbor for dist communication improvement (event-list protocol).
 ? do something about too many updates to the algorithm
 - solve problem with constant current
