--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 - move Mode to its own class and make each state a new class. make this algorithm stand in its own package, i.e. UMT
 - move neuroinet independent stuff in plots.* to utils.plots.*
 	- document and put them on home page for open use (also iterators)
+	- write package.html
 - periphery
 	- put concept-area into peripheral object? does it need its step() called?
 	+ make a single sensory area 
@@ -16,6 +17,7 @@
 	- put title on matlab graph
 	- modify to produce gnuplot graphs optionally. 
 - make debugger-style simulator
+	- make a beanshell script to bootstrap bsh.Console with a `neuroidal' environment
 	- enable placement of breakpoints
  	- allow watch switches on all objects (corresponding to watching)
 		- every entity should record its activity in a separate file
